# LSPlant

./: annotated.html  build.gradle.kts  classes.html  functions.html  functions_g.html  functions_i.html  functions_type.html  functions_vars.html  index.html  lsplant_8hpp.html  lsplant_8hpp_source.html  namespacelsplant.html  namespacelsplant_1_1v2.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  settings.gradle.kts  structlsplant_1_1v2_1_1InitInfo.html
lsplantJava/: build.gradle.kts
lsplantJava/src/main/java/org/lsposed/lsplant/: Hooker.java
lsplantJava/src/main/jni/: CMakeLists.txt  lsplant_hook.cpp
myapphooker/: build.gradle.kts
myapphooker/src/main/: AndroidManifest.xml
myapphooker/src/main/java/com/kami/myapphooker/: ActivityHooker.java  HookUtil.kt  MainActivity.java  MainActivity.kt
myapphooker/src/main/res/values/: strings.xml  themes.xml
myapphooker/src/main/res/values-night/: themes.xml
search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_16.js  classes_17.js  classes_18.js  classes_2.js  classes_3.js  (+91 more)
test/: build.gradle.kts
